--- a/ch2/index.html
+++ b/ch2/index.html
@@ -14,7 +14,7 @@
   
     <nav>
         <a href="index.html"><strong>Home<strong> </a> &nbsp;
-        <a href="racks.html"><strong>Tracks</strong> </a> &nbsp;
+        <a href="Tracks.html"><strong>Tracks</strong> </a> &nbsp;
         <a href="faculty.html"><strong>Faculty</strong> </a> &nbsp;
         <a href="contact.html"><strong>Contact</strong> </a>  &nbsp;
     </nav>
