--- a/wk4/index.html
+++ b/wk4/index.html
@@ -2,14 +2,12 @@
 <!-- Catherine Davidson 09.20.2025-->
 <html lang="en">
    
-<head>
-    <link rel="stylesheet" href="styles2.css">
-</head>
+<head> <link rel="stylesheet" href="styles2.css"> </head>
 
 <nav>
 
- <a href="index.html"><b>La Bella Home page<b> </a> &nbsp;
- <a href="specials.html"><b>specials<b> </a> &nbsp;
+ <a href="index.html"><b>La Bella Home page</b> &nbsp;
+ <a href="specials.html"><b>specials</b> &nbsp;
 
 </nav>
 <header>Welcome to La Bella</header>
