--- a/wk4/index.html
+++ b/wk4/index.html
@@ -6,8 +6,8 @@
 
 <nav>
 
- <a href="index.html"><b>La Bella Home page</b> &nbsp;
- <a href="specials.html"><b>specials</b> &nbsp;
+ <a href="index.html"><b>La Bella Home page</b> </a>&nbsp;
+ <a href="specials.html"><b>specials</b></a>&nbsp;
 
 </nav>
 <header>Welcome to La Bella</header>
