--- a/wk4/index.html
+++ b/wk4/index.html
@@ -2,11 +2,15 @@
 <!-- Catherine Davidson 09.20.2025-->
 <html lang="en">
    
-<head> <link rel="stylesheet" href="styles2.css"> </head>
+<head> 
+   <title>La Bella Home page</title>
+    <meta charset="8-UTF">
+    <link rel="stylesheet" href="styles2.css"> 
+</head>
 
 <nav>
 
- <a href="index.html"><b>La Bella Home page</b> </a>&nbsp;
+ <a href="index.html"><b>La Bella Home page</b></a>&nbsp;
  <a href="specials.html"><b>specials</b></a>&nbsp;
 
 </nav>
