--- a/wk4/specials.html
+++ b/wk4/specials.html
@@ -4,15 +4,14 @@
    
 <head>
    <title>La Bella Home page</title>
-    <meta charset="8-UTF">
     <link rel="stylesheet" href="styles2.css">
 </head>
 
 
 <nav>
 
- <a href="index.html"><b>La Bella Home page<b> </a> &nbsp;
- <a href="specials.html"><b>specials<b> </a> &nbsp;
+ <a href="index.html"><b>La Bella Home page</b> </a> &nbsp;
+ <a href="specials.html"><b>specials</b> </a> &nbsp;
 
 </nav>
 <header>La Bella's Specials</header>
